Added section on how to create histograms from GC/Safepoint logs